--- a/package.json
+++ b/package.json
@@ -1,13 +1,33 @@
 {
-  "type": "module",
-  "name": "trello-api",
-  "version": "1.0.0",
-  "description": "Trello Mern Stack",
-  "main": "src/server.js",
-  "author": "baolongdev",
-  "license": "MIT",
+  "name": "trello_api",
   "private": true,
+  "version": "1.0.0",
+  "author": "BaoLongDev",
+  "description": "",
+  "engines": {
+    "node": "18.16.0"
+  },
+  "scripts": {
+    "lint": "eslint src --ext js --report-unused-disable-directives --max-warnings 0",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel ./src -d ./build/src",
+    "build": "npm run clean && npm run build-babel",
+    "production": "npm run build && node ./build/src/server.js",
+    "dev": "nodemon --exec babel-node ./src/server.js"
+  },
   "dependencies": {
+    "@babel/runtime": "^7.22.10",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/eslint-parser": "^7.22.10",
+    "@babel/node": "^7.22.10",
+    "@babel/plugin-transform-runtime": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.47.0",
+    "nodemon": "^3.0.1"
   }
 }
