--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "trello_api",
   "private": true,
   "version": "1.0.0",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.22.10",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
